# exa-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  FALLBACK.md  QUICKREF.md  README.md  SUMMARY.md  USAGE.md  cli.py  pyproject.toml  router-compose.yml  start.sh
src/exa_proxy/: __init__.py  api.py  config.py  executor.py  http_proxy.py  key_manager.py  main.py  middleware.py  proxy_logic.py  router.py
tests/: test_admin_auth.py  test_fallback.py  test_key_manager.py  test_main.py  test_retry_policy.py  test_router.py
