[project]
name = "exa-proxy"
version = "0.1.0"
description = "Proxy for Exa MCP with hooks, retries, and key rotation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.14.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "httpx>=0.28.1",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "validators>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
